--- a/epic-react-fundamentals/src/exercise/04.html
+++ b/epic-react-fundamentals/src/exercise/04.html
@@ -9,12 +9,18 @@
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
 
+    const message = ({ children }) => {
+      return <div className="message">{children}</div>
+    }
+
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    const helloElement = React.createElement(message, { children: 'Hello World 2' })
     const element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
+        {message({ children: 'Hello world' })}
+        {helloElement}
+        {message({ children: 'Goodbye World' })}
       </div>
     )
 
