--- a/epic-react-fundamentals/src/exercise/04.html
+++ b/epic-react-fundamentals/src/exercise/04.html
@@ -1,30 +1,46 @@
 <!-- Creating custom components -->
-<!-- http://localhost:3000/isolated/exercise/04.html -->
+<!-- 💯 Runtime validation with PropTypes -->
+<!-- http://localhost:3000/isolated/final/04.extra-3.html -->
 
 <body>
   <div id="root"></div>
   <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
-    // 🐨 Make a function called `message` which returns the JSX we want to share
-
-    const message = ({ children }) => {
-      return <div className="message">{children}</div>
+    const PropTypes = {
+      string(props, propName, componentName) {
+        if (typeof props[propName] !== 'string') {
+          return new Error(
+            `Hey, the component ${componentName} needs the prop ${propName} to be a string, but a ${typeof props[
+              propName
+            ]} was passed`,
+          )
+        }
+      },
     }
 
-    // 🐨 use that function in place of the divs below with:
-    // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
-    const helloElement = React.createElement(message, { children: 'Hello World 2' })
+    function Message({subject, greeting}) {
+      return (
+        <div className="message">
+          {greeting}, {subject}
+        </div>
+      )
+    }
+
+    Message.propTypes = {
+      subject: PropTypes.string,
+      greeting: PropTypes.string,
+    }
+
     const element = (
       <div className="container">
-        {message({ children: 'Hello world' })}
-        {helloElement}
-        {message({ children: 'Goodbye World' })}
+        <Message subject="World" greeting="Hello" />
+        <Message subject="World" greeting="Goodbye" />
       </div>
     )
 
-    // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.createRoot(document.getElementById('root')).render(element)
   </script>
 </body>
