finished styling lesson

--- a/epic-react-fundamentals/src/exercise/04.html
+++ b/epic-react-fundamentals/src/exercise/04.html
@@ -14,14 +14,14 @@
         if (typeof props[propName] !== 'string') {
           return new Error(
             `Hey, the component ${componentName} needs the prop ${propName} to be a string, but a ${typeof props[
-              propName
+            propName
             ]} was passed`,
           )
         }
       },
     }
 
-    function Message({subject, greeting}) {
+    function Message({ subject, greeting }) {
       return (
         <div className="message">
           {greeting}, {subject}
@@ -35,10 +35,10 @@
     }
 
     const element = (
-      <div className="container">
+      <React.Fragment>
         <Message subject="World" greeting="Hello" />
         <Message subject="World" greeting="Goodbye" />
-      </div>
+      </React.Fragment>
     )
 
     ReactDOM.createRoot(document.getElementById('root')).render(element)
